Use RMSprop as an optimizer - it will speed up training dramatically

--- a/preprocessing_generation.ipynb
+++ b/preprocessing_generation.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -349,17 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "import keras.models as km\n",
-    "import keras.layers as kl"
+    "import keras.layers as kl\n",
+    "from keras.optimizers import RMSprop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -374,8 +375,10 @@
     "print('Building network.')\n",
     "model = km.Sequential()\n",
     "model.add(kl.LSTM(128, input_shape = (sentence_length, num_words)))\n",
+    "model.add(Dropout(0.1))\n",
     "model.add(kl.Dense(num_words, activation = 'softmax'))\n",
-    "model.compile(loss = 'categorical_crossentropy', optimizer = 'sgd',\n",
+    "optimizer = RMSprop(lr=0.01) # 'sgd'\n",
+    "model.compile(loss = 'categorical_crossentropy', optimizer = optimizer,\n",
     "              metrics = ['accuracy'])"
    ]
   },
@@ -389,27 +392,27 @@
      "output_type": "stream",
      "text": [
       "Beginning fit.\n",
-      "Epoch 1/200\n",
-      "46534/46534 [==============================] - 104s 2ms/step - loss: 5.5129 - acc: 0.1120\n",
-      "Epoch 2/200\n",
-      "46534/46534 [==============================] - 104s 2ms/step - loss: 5.4754 - acc: 0.1120\n",
-      "Epoch 3/200\n",
-      "46534/46534 [==============================] - 104s 2ms/step - loss: 5.4460 - acc: 0.1120\n",
-      "Epoch 4/200\n",
-      "46534/46534 [==============================] - 104s 2ms/step - loss: 5.4223 - acc: 0.1120\n",
-      "Epoch 5/200\n",
-      "46534/46534 [==============================] - 105s 2ms/step - loss: 5.4028 - acc: 0.1120\n",
-      "Epoch 6/200\n",
-      "46534/46534 [==============================] - 105s 2ms/step - loss: 5.3865 - acc: 0.1120\n",
-      "Epoch 7/200\n",
-      "14848/46534 [========>.....................] - ETA: 1:11 - loss: 5.3930 - acc: 0.1136"
+      "Epoch 1/10\n",
+      "46534/46534 [==============================] - 104s 2ms/step - loss: 4.3631 - acc: 0.2590\n",
+      "Epoch 2/10\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 2.9910 - acc: 0.4656\n",
+      "Epoch 3/10\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 2.4405 - acc: 0.5533\n",
+      "Epoch 4/10\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 2.1055 - acc: 0.6088\n",
+      "Epoch 5/10\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 1.8714 - acc: 0.6500\n",
+      "Epoch 6/10\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 1.6928 - acc: 0.6826\n",
+      "Epoch 7/10\n",
+      "30976/46534 [==================>...........] - ETA: 34s - loss: 1.4981 - acc: 0.7161"
      ]
     }
    ],
    "source": [
     "# Fit!  Begin elevator music...\n",
     "print('Beginning fit.')\n",
-    "fit = model.fit(x, y, epochs = 200, batch_size = 256)\n",
+    "fit = model.fit(x, y, epochs = 10, batch_size = 256)\n",
     "\n",
     "# Save the model so that we can use it as a starting point.\n",
     "model.save('model_50.h5')"
@@ -417,10 +420,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beginning fit.\n",
+      "Epoch 1/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.4609 - acc: 0.9124\n",
+      "Epoch 2/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.4435 - acc: 0.9151\n",
+      "Epoch 3/20\n",
+      "46559/46559 [==============================] - 47s 999us/step - loss: 0.4357 - acc: 0.9157\n",
+      "Epoch 4/20\n",
+      "46559/46559 [==============================] - 47s 999us/step - loss: 0.4125 - acc: 0.9194\n",
+      "Epoch 5/20\n",
+      "46559/46559 [==============================] - 47s 1000us/step - loss: 0.3986 - acc: 0.9226\n",
+      "Epoch 6/20\n",
+      "46559/46559 [==============================] - 46s 998us/step - loss: 0.3883 - acc: 0.9231\n",
+      "Epoch 7/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3735 - acc: 0.9257\n",
+      "Epoch 8/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3689 - acc: 0.9258\n",
+      "Epoch 9/20\n",
+      "46559/46559 [==============================] - 47s 1000us/step - loss: 0.3553 - acc: 0.9277\n",
+      "Epoch 10/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3385 - acc: 0.9307\n",
+      "Epoch 11/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3316 - acc: 0.9329\n",
+      "Epoch 12/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3237 - acc: 0.9324\n",
+      "Epoch 13/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3101 - acc: 0.9354\n",
+      "Epoch 14/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2976 - acc: 0.9390\n",
+      "Epoch 15/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2920 - acc: 0.9377\n",
+      "Epoch 16/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2878 - acc: 0.9385\n",
+      "Epoch 17/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2746 - acc: 0.9416\n",
+      "Epoch 18/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2733 - acc: 0.9416\n",
+      "Epoch 19/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2675 - acc: 0.9425\n",
+      "Epoch 20/20\n",
+      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2629 - acc: 0.9431\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit!  Begin elevator music...\n",
+    "print('Beginning fit.')\n",
+    "fit = model.fit(x, y, epochs = 20, batch_size = 256)\n",
+    "\n",
+    "# Save the model so that we can use it as a starting point.\n",
+    "model.save('model_50.h5')\n",
+    "print('Model saved.')"
+   ]
   },
   {
    "cell_type": "code",
@@ -438,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -448,23 +507,75 @@
       "Reading model file.\n",
       "Generated lyrics: \n",
       "\n",
-      "on \n",
-      " came the , wok your whitney , cry , ooh , i do it \n",
-      " yeah , bitch , i ain't , these shit , ooh your stop ) \n",
-      " yeah , niggas in you we from like a coupe ( damn ) \n",
-      " she around this dick on make her is i i'm ) \n",
-      " i sell at the money , boy got a new and yeah \n",
-      " dropped bitch i got i new shit \n",
-      " jump i fuckin' in your bitch , go go jump \n",
+      "the door \n",
+      " i got the kitchen i spent two bust on a whip it i never fuckin' \n",
+      " i got a big . and ya \n",
+      " ayy , ayy , yeah , lil pump , yeah , ouu , yeah , huh \n",
+      " brr , huh \n",
+      " i'm in the bitch , ay , ooh , lil pump , yeah , [chorus] \n",
+      " hold up on pop out \n",
+      " ******************** \n",
       " \n",
-      " [ intro ] \n",
-      " lil pump lil pump , lil pump , lil pump , i don't up a bitch ( esskeetit ) \n",
-      " rather up go lean ) \n",
-      " i i just left 'em ( don't ) \n",
-      " to to xan at go , and i think off \n",
       " \n",
-      " [ intro ] \n",
-      " yeah pump , yeah \n"
+      " dr . phil \n",
+      " ******************** \n",
+      " racks on racks \n",
+      " \n",
+      " [chorus] \n",
+      " yeah , multi shit ( ooh , ooh ) \n",
+      " if you got the lot of bitches , designer the bust down ( chyeah , chyeah ) \n",
+      " i'm the youngest flexer ( what ) , i'm the youngest flexer \n",
+      " \n",
+      " [verse] \n",
+      " i just left the youngest flexer \n",
+      " bitch , i just obama \n",
+      " ******************** \n",
+      " [intro] \n",
+      " lil pump \n",
+      " ******************** \n",
+      " [intro] \n",
+      " lil pump \n",
+      " ayy , ayy , ayy \n",
+      " oh my god , ronny \n",
+      " vroom \n",
+      " \n",
+      " [chorus] \n",
+      " vroom vroom , vroom vroom vroom vroom ( vroom ) \n",
+      " bitch , convertible coupe ( yeah ) \n",
+      " she gon' flash her titties ( flash 'em ) , out of the roof ( yeah ) \n",
+      " scoot scoot , scoot scoot scoot scoot ( scoot , scoot ) \n",
+      " she gon' fuck on the crew \n",
+      " who who , who , who is you ? ( who ? ) \n",
+      " i ain't heard of you \n",
+      " vroom vroom , vroom vroom vroom vroom ( vroom ) \n",
+      " bitch , convertible coupes \n",
+      " vroom , vroom vroom vroom vroom ( vroom ) \n",
+      " bitch , convertible coupes \n",
+      " i'ma hop out and just shoot you in front of your boo \n",
+      " i got so much guns on me ( bah ) , i'm in a hotel room ( bah , bah , bah , bah ) \n",
+      " \n",
+      " [verse] \n",
+      " you gon' rob me ? hahaha \n",
+      " bitch , i'm laughing at you ( bitch ) \n",
+      " woo , woo , [chorus] , i flex like he a door , ouu ( i got a big . 30 \n",
+      " \n",
+      " [chorus] \n",
+      " i got fast cars , bad bitches and designer clothes \n",
+      " couple thousand on my wrist and my neck is on froze \n",
+      " spanish bitches' butt naked and they twerkin' on the stove \n",
+      " too much racks in my pocket that my wallet can't fold \n",
+      " i got fast cars , bad bitches and designer clothes \n",
+      " i got fast cars , bad bitches and designer clothes \n",
+      " couple thousand on my wrist and my neck is on froze \n",
+      " too much racks in my pocket that my wallet can't fold \n",
+      " ******************** \n",
+      " \n",
+      " \n",
+      " designer ( brr , ayy , chyeah , ayy , ayy , ayy ) \n",
+      " i'm gon' got that \n",
+      " came in a foreign ( ooh ) \n",
+      " ouu , i just love \n",
+      " no way , \n"
      ]
     }
    ],
@@ -475,7 +586,7 @@
     "import shelve\n",
     "import random\n",
     "\n",
-    "modelfile = 'model_50.h5'\n",
+    "modelfile = 'model_25.h5'\n",
     "\n",
     "#######################################################################\n",
     "\n",
@@ -485,7 +596,7 @@
     "\n",
     "# Get the meta-data.\n",
     "\n",
-    "sentence_length = 50\n",
+    "sentence_length = 25\n",
     "num_words = 2500\n",
     "\n",
     "\n",
@@ -507,7 +618,7 @@
     "# generated text.  Take the output and append it to the seed sentence\n",
     "# and remove the first word from the seed sentence.  Then repeat until\n",
     "# you've generated as many words as you like.\n",
-    "for i in range(150):\n",
+    "for i in range(500):\n",
     "\n",
     "    # Get the most-probably next word.\n",
     "    pred = np.argmax(model.predict(x, verbose = 0))\n",
@@ -549,18 +660,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
   }
  },
  "nbformat": 4,
