Moved the files into corresponding folders

--- a/preprocessing_generation.ipynb
+++ b/preprocessing_generation.ipynb
@@ -24,13 +24,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [
@@ -138,13 +131,6 @@
     "    all_lyrics.write('********************\\n\\n\\n')\n",
     "all_lyrics.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -384,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +391,13 @@
       "Epoch 6/10\n",
       "46534/46534 [==============================] - 102s 2ms/step - loss: 1.6928 - acc: 0.6826\n",
       "Epoch 7/10\n",
-      "30976/46534 [==================>...........] - ETA: 34s - loss: 1.4981 - acc: 0.7161"
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 1.5461 - acc: 0.7105\n",
+      "Epoch 8/10\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 1.4172 - acc: 0.7353\n",
+      "Epoch 9/10\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 1.3105 - acc: 0.7551\n",
+      "Epoch 10/10\n",
+      "46534/46534 [==============================] - 103s 2ms/step - loss: 1.2156 - acc: 0.7710\n"
      ]
     }
    ],
@@ -415,12 +407,13 @@
     "fit = model.fit(x, y, epochs = 10, batch_size = 256)\n",
     "\n",
     "# Save the model so that we can use it as a starting point.\n",
-    "model.save('model_50.h5')"
+    "model.save('models/model_50.h5')\n",
+    "print('Model saved.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -428,56 +421,24 @@
      "output_type": "stream",
      "text": [
       "Beginning fit.\n",
-      "Epoch 1/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.4609 - acc: 0.9124\n",
-      "Epoch 2/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.4435 - acc: 0.9151\n",
-      "Epoch 3/20\n",
-      "46559/46559 [==============================] - 47s 999us/step - loss: 0.4357 - acc: 0.9157\n",
-      "Epoch 4/20\n",
-      "46559/46559 [==============================] - 47s 999us/step - loss: 0.4125 - acc: 0.9194\n",
-      "Epoch 5/20\n",
-      "46559/46559 [==============================] - 47s 1000us/step - loss: 0.3986 - acc: 0.9226\n",
-      "Epoch 6/20\n",
-      "46559/46559 [==============================] - 46s 998us/step - loss: 0.3883 - acc: 0.9231\n",
-      "Epoch 7/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3735 - acc: 0.9257\n",
-      "Epoch 8/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3689 - acc: 0.9258\n",
-      "Epoch 9/20\n",
-      "46559/46559 [==============================] - 47s 1000us/step - loss: 0.3553 - acc: 0.9277\n",
-      "Epoch 10/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3385 - acc: 0.9307\n",
-      "Epoch 11/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3316 - acc: 0.9329\n",
-      "Epoch 12/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3237 - acc: 0.9324\n",
-      "Epoch 13/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.3101 - acc: 0.9354\n",
-      "Epoch 14/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2976 - acc: 0.9390\n",
-      "Epoch 15/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2920 - acc: 0.9377\n",
-      "Epoch 16/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2878 - acc: 0.9385\n",
-      "Epoch 17/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2746 - acc: 0.9416\n",
-      "Epoch 18/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2733 - acc: 0.9416\n",
-      "Epoch 19/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2675 - acc: 0.9425\n",
-      "Epoch 20/20\n",
-      "46559/46559 [==============================] - 47s 1ms/step - loss: 0.2629 - acc: 0.9431\n"
+      "Epoch 1/5\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 1.1354 - acc: 0.7874\n",
+      "Epoch 2/5\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 1.0595 - acc: 0.8008\n",
+      "Epoch 3/5\n",
+      "46534/46534 [==============================] - 103s 2ms/step - loss: 0.9939 - acc: 0.8134\n",
+      "Epoch 4/5\n",
+      "17152/46534 [==========>...................] - ETA: 1:04 - loss: 0.8345 - acc: 0.8421"
      ]
     }
    ],
    "source": [
     "# Fit!  Begin elevator music...\n",
     "print('Beginning fit.')\n",
-    "fit = model.fit(x, y, epochs = 20, batch_size = 256)\n",
+    "fit = model.fit(x, y, epochs = 5, batch_size = 256)\n",
     "\n",
     "# Save the model so that we can use it as a starting point.\n",
-    "model.save('model_50.h5')\n",
+    "model.save('models/model_50.h5')\n",
     "print('Model saved.')"
    ]
   },
@@ -586,7 +547,7 @@
     "import shelve\n",
     "import random\n",
     "\n",
-    "modelfile = 'model_25.h5'\n",
+    "modelfile = 'models/model_50.h5'\n",
     "\n",
     "#######################################################################\n",
     "\n",
