--- a/preprocessing_generation.ipynb
+++ b/preprocessing_generation.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,10 @@
       "Epoch 3/5\n",
       "46534/46534 [==============================] - 103s 2ms/step - loss: 0.9939 - acc: 0.8134\n",
       "Epoch 4/5\n",
-      "17152/46534 [==========>...................] - ETA: 1:04 - loss: 0.8345 - acc: 0.8421"
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 0.9293 - acc: 0.8238\n",
+      "Epoch 5/5\n",
+      "46534/46534 [==============================] - 102s 2ms/step - loss: 0.8762 - acc: 0.8328\n",
+      "Model saved.\n"
      ]
     }
    ],
